<resources>
    <string name="app_name">Meu Ticket</string>
    <string name="login_submit">Entrar</string>
    <string name="go_to_cart">Ver carrinho</string>
    <string name="print_list">Imprimir Lista</string>
    <string name="warning_alert_title">Atenção</string>
    <string name="error_button_ok">OK</string>
    <string name="one">1</string>
    <string name="pay_value">Pagar %s</string>
    <string name="update_value">Atualizar %s</string>
    <string name="add_value">Adicionar %s</string>
    <string name="total_value">Total %s</string>
    <string name="paid_value">Pago %s</string>
    <string name="submit_save">Cadastrar</string>
    <string name="admin_open_cash">Abrir caixa</string>
    <string name="admin_close_cash">Fechar caixa</string>
    <string name="admin_withdraw">Sangria</string>
    <string name="admin_input">Suprimentos</string>
    <string name="admin_cash_balance">Saldo de caixa</string>
    <string name="admin_rollback">Estornos</string>
    <string name="admin_reprint">Reimprimir fechamento</string>
    <string name="admin_product_list">Relatório de produtos</string>
    <string name="name_label">Nome *</string>
    <string name="category_name_hint">Digite o nome da categoria</string>
    <string name="event_name_hint">Digite o nome do evento</string>
    <string name="home_new_ticket">Venda</string>
    <string name="home_registers">Cadastros</string>
    <string name="home_admin">Administração</string>
    <string name="home_settings">Configurações</string>
    <string name="login_user_label">Usuário</string>
    <string name="login_password_label">Senha</string>
    <string name="login_expires_label">Expiração: 08/11\n17044902902</string>
    <string name="product_search_hint">Digite o código ou nome do produto</string>
    <string name="payment_cash">Dinheiro</string>
    <string name="payment_credit">Crédito</string>
    <string name="payment_debit">Débito</string>
    <string name="payment_pix">Pix</string>
    <string name="payment_cortesy">Cortesia</string>
    <string name="payment_others">Outros</string>
    <string name="payment_finish">Finalizar</string>
    <string name="product_name_hint">Digite o nome do produto</string>
    <string name="value_label">Valor *</string>
    <string name="product_value_hint">Digite o valor do produto</string>
    <string name="category_label">Categoria *</string>
    <string name="product_category_hint">Selecione uma categoria</string>
    <string name="product_print_receipt">Imprime segunda via?</string>
    <string name="products">Produtos</string>
    <string name="users">Usuários</string>
    <string name="categories">Categorias</string>
    <string name="events">Eventos</string>
    <string name="category_search_hint">Digite o código ou nome da categoria</string>
    <string name="event_search_hint">Digite o código ou nome do evento</string>
    <string name="user_search_hint">Digite o código ou tipo do usuário</string>
    <string name="login_user_hint">Digite o login do usuário</string>
    <string name="login_password_hint">Digite a senha do usuário</string>
    <string name="user_admin_checkbox">É administrador?</string>
    <string name="remove_from_cart_message">Deseja remover o item do carrinho?</string>
    <string name="dialog_yes">Sim</string>
    <string name="dialog_no">Não</string>
    <string name="success">Sucesso</string>
    <string name="saved_success_message">Dados salvos com sucesso!</string>
    <string name="category_duplicate_error">Categoria já existe</string>
    <string name="category_validation_name_error">Nome precisa ter pelo menos 3 caracteres</string>
    <string name="delete_dialog_message">Deseja excluir o registro?</string>
    <string name="category_in_cart_error">Esta categoria está no carrinho, remova-a antes de fazer essa operação</string>
    <string name="event_duplicate_error">Evento já existe</string>
    <string name="register_title">Cadastros</string>
    <string name="update_button">Atualizar</string>
    <string name="product_duplicate_error">Produto já cadastrado</string>
    <string name="product_in_cart_error">Este produto está no carrinho, remova-o antes de fazer essa operação</string>
    <string name="user_gotit_label">Entendi</string>
    <string name="user_validation_message">Usuário deve conter mais de 3 caracteres\nSenha deve conter mais de 4 caracteres</string>
    <string name="user_delete_myself_error">Não é possível deletar um usuário logado, entre com outra conta admin</string>
    <string name="new_ticket_title">Nova Venda</string>
</resources>