<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.meuticket.pos.ui.components.ViewToolbar
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height"
        style="@style/ToolbarStyle"
        android:id="@+id/toolbar"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/padding_medium3">

        <com.meuticket.pos.ui.components.ViewInput
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:label="@string/name_label"
            android:id="@+id/name"
            app:hint="@string/product_name_hint"/>

        <com.meuticket.pos.ui.components.ViewInput
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:label="@string/value_label"
            android:id="@+id/value"
            app:inputType="number"
            app:hint="@string/product_value_hint"
            android:layout_marginTop="@dimen/margin_large"/>

        <com.meuticket.pos.ui.components.ViewInput
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:label="@string/category_label"
            android:id="@+id/category"
            app:hint="@string/product_category_hint"
            app:drawableEnd="@drawable/ic_mdi_arrow_down_drop_circle"
            android:layout_marginTop="@dimen/margin_large"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_print_receipt"
            android:layoutDirection="rtl"
            android:id="@+id/print_receipt"/>

        <com.meuticket.pos.ui.components.ViewButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/PrimaryButton"
            android:text="@string/submit_save"
            android:id="@+id/submit"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_large"/>

    </androidx.appcompat.widget.LinearLayoutCompat>



</androidx.appcompat.widget.LinearLayoutCompat>