<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/light_1">

        <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/guideline"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_value"
            android:id="@+id/payment_total"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="@dimen/margin_large"
            android:layout_marginStart="@dimen/margin_large"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/paid_value"
            android:id="@+id/payment_total_paid"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/margin_large"
            android:layout_marginStart="@dimen/margin_large"/>

        <com.meuticket.pos.ui.components.ViewCard
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/ic_mdi_cash"
            app:label="@string/payment_cash"
            app:layout_constraintTop_toBottomOf="@id/payment_total_paid"
            app:layout_constraintEnd_toStartOf="@id/guideline"
            android:id="@+id/payment_cash"/>

        <com.meuticket.pos.ui.components.ViewCard
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/ic_mdi_credit_card_multiple"
            app:label="@string/payment_credit"
            android:id="@+id/payment_credit"
            app:layout_constraintStart_toEndOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/payment_total_paid"/>

        <com.meuticket.pos.ui.components.ViewCard
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/ic_mdi_credit_card"
            app:label="@string/payment_debit"
            app:layout_constraintTop_toBottomOf="@id/payment_cash"
            app:layout_constraintEnd_toStartOf="@id/guideline"
            android:id="@+id/payment_debit"/>

        <com.meuticket.pos.ui.components.ViewCard
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/ic_mdi_qrcode"
            app:label="@string/payment_pix"
            android:id="@+id/payment_pix"
            app:layout_constraintStart_toEndOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/payment_credit"/>

        <com.meuticket.pos.ui.components.ViewCard
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/ic_mdi_credit_card"
            app:label="@string/payment_cortesy"
            app:layout_constraintTop_toBottomOf="@id/payment_debit"
            app:layout_constraintEnd_toStartOf="@id/guideline"
            android:id="@+id/payment_cortesy"/>

        <com.meuticket.pos.ui.components.ViewCard
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/ic_mdi_qrcode"
            app:label="@string/payment_others"
            android:id="@+id/payment_others"
            app:layout_constraintStart_toEndOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/payment_pix"/>

        <com.meuticket.pos.ui.components.ViewButton
            android:layout_width="152dp"
            android:layout_height="wrap_content"
            style="@style/PrimaryButton"
            android:text="@string/payment_finish"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="@dimen/margin_large"
            android:id="@+id/payment_finish"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
