<?xml version="1.0" encoding="utf-8"?>
<layout>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="@color/light_2">

        <com.meuticket.pos.ui.components.ViewToolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/ToolbarStyle"
            android:id="@+id/toolbar"/>

        <com.meuticket.pos.ui.components.ViewCard
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/register_products"
            app:label="@string/products"
            app:icon="@drawable/ic_mdi_basket"
            android:layout_toLeftOf="@id/guideline"
            android:layout_above="@id/guideline"/>

        <com.meuticket.pos.ui.components.ViewCard
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/register_users"
            app:label="@string/users"
            app:icon="@drawable/ic_mdi_account_supervisor"
            android:layout_toRightOf="@id/guideline"
            android:layout_above="@id/guideline"/>

        <com.meuticket.pos.ui.components.ViewCard
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/register_categories"
            app:label="@string/categories"
            app:icon="@drawable/ic_plus"
            android:layout_toLeftOf="@id/guideline"
            android:layout_below="@id/guideline"/>

        <com.meuticket.pos.ui.components.ViewCard
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/register_events"
            app:label="@string/events"
            app:icon="@drawable/ic_mdi_calendar_month"
            android:layout_toRightOf="@id/guideline"
            android:layout_below="@id/guideline"/>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_centerInParent="true"
            android:id="@+id/guideline"/>

    </RelativeLayout>
</layout>
