<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/light_2">

        <com.meuticket.pos.ui.components.ViewToolbar
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="match_parent"
            android:layout_height="@dimen/toolbar_height"
            style="@style/ToolbarStyle"
            android:id="@+id/toolbar"/>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@id/new_ticket_footer"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            android:background="@drawable/list_bg"
            android:paddingTop="@dimen/padding_large"
            android:layout_marginTop="@dimen/margin_medium2"
            android:id="@+id/cart_list"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/new_ticket_footer">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="@dimen/footer_height"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                android:background="@color/light_pure"
                android:id="@+id/cart_pay_footer"
                android:padding="@dimen/padding_medium2"
                android:gravity="center">

                <com.meuticket.pos.ui.components.ViewButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pay_value"
                    android:id="@+id/pay"
                    style="@style/PrimaryButton.SM"/>

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                android:background="@color/light_pure"
                android:id="@+id/cart_qtd_footer"
                android:padding="@dimen/padding_medium2"
                android:gravity="center"
                android:visibility="gone">

                <androidx.appcompat.widget.AppCompatImageButton
                    android:layout_width="@dimen/icon_medium"
                    android:layout_height="@dimen/icon_medium"
                    android:src="@drawable/ic_minus"
                    android:background="@android:color/transparent"
                    android:id="@+id/removeOne"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/one"
                    android:id="@+id/qtd"
                    android:textSize="@dimen/font_size_large"
                    android:layout_marginHorizontal="@dimen/margin_medium2"/>

                <androidx.appcompat.widget.AppCompatImageButton
                    android:layout_width="@dimen/icon_medium"
                    android:layout_height="@dimen/icon_medium"
                    android:src="@drawable/ic_plus"
                    android:tint="@color/secondary"
                    android:background="@android:color/transparent"
                    android:id="@+id/addOne"/>

                <com.meuticket.pos.ui.components.ViewButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/update_value"
                    android:id="@+id/addToCart"
                    style="@style/HighlightButton.SM"
                    android:layout_marginStart="@dimen/margin_large"/>

            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
